# JSON-RPC-Protocol

./: README.md  keen.bat  pyproject.toml  requirements-dev.txt  requirements_dev.txt
src/jsonrpc/enum/: __init__.py  jsonrpcerrorcode.py
src/jsonrpc/model/: __init__.py  entity.py  jsonrpcbatch.py  jsonrpcerror.py  jsonrpcnotification.py  jsonrpcrequest.py  jsonrpcresponse.py
src/jsonrpc/parser/: __init__.py  jsonrpcparser.py
src/jsonrpc/validator/: validator.py
src/jsonrpc_protocol/: serializer.py  validator.py
src/jsonrpc_protocol/enum/: __init__.py  errorcode.py  protocolversion.py
src/jsonrpc_protocol/protocol/: __init__.py  batch.py  entity.py  error.py  notification.py  params.py  request.py  response.py
tests/unit/: test_protocol_v2.py
tests/unit/jsonrpc/parser/: test_jsonparser.py
